[gd_scene load_steps=68 format=2]

[ext_resource path="res://Mapa Parchis 6 jugadores.png" type="Texture" id=1]
[ext_resource path="res://Fichas/6 Jugadores/FichasMoradas6J.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dados/Scripts/Dado.gd" type="Script" id=3]
[ext_resource path="res://Fichas/6 Jugadores/FichasAmarillas6J.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fichas/6 Jugadores/FichasAzules6J.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fichas/6 Jugadores/FichasRojas6J.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fichas/6 Jugadores/FichasNaranjas6J.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/MouseClick.gd" type="Script" id=8]
[ext_resource path="res://Dados/Scripts/DadoBoton.gd" type="Script" id=9]
[ext_resource path="res://Dados/img/dice0002.png" type="Texture" id=10]
[ext_resource path="res://Dados/img/dice0011.png" type="Texture" id=11]
[ext_resource path="res://Dados/img/dice0009.png" type="Texture" id=12]
[ext_resource path="res://Dados/results/1.png" type="Texture" id=13]
[ext_resource path="res://Dados/img/dice0013.png" type="Texture" id=14]
[ext_resource path="res://Dados/img/dice0014.png" type="Texture" id=15]
[ext_resource path="res://Dados/img/dice0010.png" type="Texture" id=16]
[ext_resource path="res://Dados/results/6.png" type="Texture" id=17]
[ext_resource path="res://Dados/results/2.png" type="Texture" id=18]
[ext_resource path="res://Dados/results/4.png" type="Texture" id=19]
[ext_resource path="res://Dados/img/dice0006.png" type="Texture" id=20]
[ext_resource path="res://Dados/img/dice0005.png" type="Texture" id=21]
[ext_resource path="res://Dados/results/3.png" type="Texture" id=22]
[ext_resource path="res://Dados/img/dice0012.png" type="Texture" id=23]
[ext_resource path="res://Dados/img/dice0003.png" type="Texture" id=24]
[ext_resource path="res://Dados/img/dice0007.png" type="Texture" id=25]
[ext_resource path="res://Dados/img/dice0008.png" type="Texture" id=26]
[ext_resource path="res://Dados/results/5.png" type="Texture" id=27]
[ext_resource path="res://Dados/img/dice0004.png" type="Texture" id=28]
[ext_resource path="res://Dados/img/dice0018.png" type="Texture" id=29]
[ext_resource path="res://Dados/img/dice0037.png" type="Texture" id=30]
[ext_resource path="res://Dados/img/dice0026.png" type="Texture" id=31]
[ext_resource path="res://Dados/img/dice0023.png" type="Texture" id=32]
[ext_resource path="res://Dados/img/dice0025.png" type="Texture" id=33]
[ext_resource path="res://Dados/img/dice0033.png" type="Texture" id=34]
[ext_resource path="res://Dados/img/dice0031.png" type="Texture" id=35]
[ext_resource path="res://Dados/img/dice0040.png" type="Texture" id=36]
[ext_resource path="res://Dados/img/dice0034.png" type="Texture" id=37]
[ext_resource path="res://Dados/img/dice00028.png" type="Texture" id=38]
[ext_resource path="res://Dados/img/dice0029.png" type="Texture" id=39]
[ext_resource path="res://Dados/img/dice0032.png" type="Texture" id=40]
[ext_resource path="res://Dados/img/dice0015.png" type="Texture" id=41]
[ext_resource path="res://Dados/img/dice0030.png" type="Texture" id=42]
[ext_resource path="res://Dados/img/dice0001.png" type="Texture" id=43]
[ext_resource path="res://Dados/img/dice0020.png" type="Texture" id=44]
[ext_resource path="res://Dados/img/dice0016.png" type="Texture" id=45]
[ext_resource path="res://Dados/img/dice0017.png" type="Texture" id=46]
[ext_resource path="res://Dados/img/dice0039.png" type="Texture" id=47]
[ext_resource path="res://Dados/img/dice0019.png" type="Texture" id=48]
[ext_resource path="res://Dados/img/dice0038.png" type="Texture" id=49]
[ext_resource path="res://Dados/img/dice0036.png" type="Texture" id=50]
[ext_resource path="res://Dados/img/dice0024.png" type="Texture" id=51]
[ext_resource path="res://Dados/img/dice0027.png" type="Texture" id=52]
[ext_resource path="res://Dados/img/dice0022.png" type="Texture" id=53]
[ext_resource path="res://Dados/img/dice0021.png" type="Texture" id=54]
[ext_resource path="res://Dados/img/dice0035.png" type="Texture" id=55]
[ext_resource path="res://Fichas/6 Jugadores/FichasVerdes6J.tscn" type="PackedScene" id=56]
[ext_resource path="res://Fichas/6 Jugadores/Scripts/Parchis 6 Jugadores.gd" type="Script" id=63]
[ext_resource path="res://Fichas/6 Jugadores/Scripts/Fichas6Jugadores.gd" type="Script" id=64]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="Theme" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 17 ) ],
"loop": true,
"name": "Dado",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 29 ), ExtResource( 48 ), ExtResource( 44 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 32 ), ExtResource( 51 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 52 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 55 ), ExtResource( 50 ), ExtResource( 30 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 36 ) ],
"loop": false,
"name": "DadoRoll",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 351, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 431, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 61, 160, 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 299, 387 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 352, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 431, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 61, 160, 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 223, 344 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 352, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 432, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 62, 160, 0, 0, 0, 0, 222, 252 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 62, 160, 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 352, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 432, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 303, 209 )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 432, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 62, 160, 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 352, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 377, 253 )
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 482, 347, 0, 0, 0, 0, 481, 256, 0, 0, 0, 0, 539, 162, 0, 0, 0, 0, 432, 165, 0, 0, 0, 0, 350, 120, 0, 0, 0, 0, 300, 23, 0, 0, 0, 0, 249, 120, 0, 0, 0, 0, 170, 166, 0, 0, 0, 0, 62, 160, 0, 0, 0, 0, 119, 254, 0, 0, 0, 0, 117, 345, 0, 0, 0, 0, 61, 438, 0, 0, 0, 0, 170, 434, 0, 0, 0, 0, 249, 480, 0, 0, 0, 0, 301, 577, 0, 0, 0, 0, 352, 481, 0, 0, 0, 0, 430, 437, 0, 0, 0, 0, 540, 438, 0, 0, 0, 0, 380, 343 )
}

[node name="Main6j" type="Node2D"]
scale = Vector2( 1.16651, 1.16651 )
script = ExtResource( 63 )

[node name="MapaParchis6Jugadores" type="Sprite" parent="."]
position = Vector2( 300, 300 )
scale = Vector2( 0.507614, 0.507614 )
texture = ExtResource( 1 )

[node name="MouseClick" type="Area2D" parent="."]
position = Vector2( 300, 330 )
collision_layer = 0
collision_mask = 15
monitorable = false
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseClick"]
shape = SubResource( 1 )

[node name="DadoBoton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.539
anchor_right = 0.5
anchor_bottom = 0.539
margin_left = 259.0
margin_top = 277.0
margin_right = 336.0
margin_bottom = 319.0
mouse_default_cursor_shape = 2
theme = SubResource( 2 )
action_mode = 0
script = ExtResource( 9 )

[node name="Dado2" type="AnimatedSprite" parent="DadoBoton"]
position = Vector2( 63, 19 )
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 3 )
animation = "Dado"
speed_scale = 10.0
script = ExtResource( 3 )

[node name="Dado" type="AnimatedSprite" parent="DadoBoton"]
position = Vector2( 19, 19 )
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 3 )
animation = "Dado"
speed_scale = 10.0
script = ExtResource( 3 )

[node name="Movimientos" type="Node2D" parent="."]

[node name="MovimientosVerde" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 4 )

[node name="MovimientosRojo" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 5 )

[node name="MovimientosAzul" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 6 )

[node name="MovimientosAmarillo" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 7 )

[node name="MovimientosMorado" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 8 )

[node name="MovimientosNaranja" type="Path2D" parent="Movimientos"]
visible = false
curve = SubResource( 9 )

[node name="SalidaVerde" type="Node2D" parent="Movimientos"]

[node name="PosSalidaVerde" type="Position2D" parent="Movimientos/SalidaVerde"]
position = Vector2( 333, 479.981 )

[node name="PosSalidaVerde2" type="Position2D" parent="Movimientos/SalidaVerde"]
position = Vector2( 345.526, 479.962 )

[node name="PosSalidaVerde3" type="Position2D" parent="Movimientos/SalidaVerde"]
position = Vector2( 358, 480 )

[node name="PosSalidaVerde4" type="Position2D" parent="Movimientos/SalidaVerde"]
position = Vector2( 370.53, 480.038 )

[node name="SalidaRojo" type="Node2D" parent="Movimientos"]
position = Vector2( 0, 1 )

[node name="PosSalidaRojo" type="Position2D" parent="Movimientos/SalidaRojo"]
position = Vector2( 159.423, 417.297 )
rotation = 1.0472

[node name="PosSalidaRojo2" type="Position2D" parent="Movimientos/SalidaRojo"]
position = Vector2( 166.261, 427.899 )
rotation = 1.0472

[node name="PosSalidaRojo3" type="Position2D" parent="Movimientos/SalidaRojo"]
position = Vector2( 172.556, 438.91 )
rotation = 1.0472

[node name="PosSalidaRojo4" type="Position2D" parent="Movimientos/SalidaRojo"]
position = Vector2( 179.241, 450.148 )
rotation = 1.0472

[node name="SalidaAzul" type="Node2D" parent="Movimientos"]
position = Vector2( 0, 1 )

[node name="PosSalidaAzul" type="Position2D" parent="Movimientos/SalidaAzul"]
position = Vector2( 128.429, 237.428 )
rotation = -1.0472

[node name="PosSalidaAzul2" type="Position2D" parent="Movimientos/SalidaAzul"]
position = Vector2( 122, 248 )
rotation = -1.0472

[node name="PosSalidaAzul3" type="Position2D" parent="Movimientos/SalidaAzul"]
position = Vector2( 115.571, 258.572 )
rotation = -1.0472

[node name="PosSalidaAzul4" type="Position2D" parent="Movimientos/SalidaAzul"]
position = Vector2( 109.285, 269.573 )
rotation = -1.0472

[node name="SalidaAmarillo" type="Node2D" parent="Movimientos"]
position = Vector2( 0, 1 )

[node name="PosSalidaAmarillo" type="Position2D" parent="Movimientos/SalidaAmarillo"]
position = Vector2( 229.475, 119 )

[node name="PosSalidaAmarillo2" type="Position2D" parent="Movimientos/SalidaAmarillo"]
position = Vector2( 242.438, 119 )

[node name="PosSalidaAmarillo3" type="Position2D" parent="Movimientos/SalidaAmarillo"]
position = Vector2( 255.482, 119 )

[node name="PosSalidaAmarillo4" type="Position2D" parent="Movimientos/SalidaAmarillo"]
position = Vector2( 268.365, 119 )

[node name="SalidaMorado" type="Node2D" parent="Movimientos"]
position = Vector2( 0, 1 )

[node name="PosSalidaMorado" type="Position2D" parent="Movimientos/SalidaMorado"]
position = Vector2( 421, 149 )
rotation = 1.0472

[node name="PosSalidaMorado2" type="Position2D" parent="Movimientos/SalidaMorado"]
position = Vector2( 427.107, 159.697 )
rotation = 1.0472

[node name="PosSalidaMorado3" type="Position2D" parent="Movimientos/SalidaMorado"]
position = Vector2( 433.804, 170.822 )
rotation = 1.0472

[node name="PosSalidaMorado4" type="Position2D" parent="Movimientos/SalidaMorado"]
position = Vector2( 440.027, 181.406 )
rotation = 1.0472

[node name="SalidaNaranja" type="Node2D" parent="Movimientos"]
position = Vector2( 0, 1 )

[node name="PosSalidaNaranja" type="Position2D" parent="Movimientos/SalidaNaranja"]
position = Vector2( 491.187, 328.235 )
rotation = -1.0472

[node name="PosSalidaNaranja2" type="Position2D" parent="Movimientos/SalidaNaranja"]
position = Vector2( 485.111, 339.128 )
rotation = -1.0472

[node name="PosSalidaNaranja3" type="Position2D" parent="Movimientos/SalidaNaranja"]
position = Vector2( 478.731, 349.871 )
rotation = -1.0472

[node name="PosSalidaNaranja4" type="Position2D" parent="Movimientos/SalidaNaranja"]
position = Vector2( 472.351, 360.764 )
rotation = -1.0472

[node name="InterfazTurno" type="Control" parent="."]
margin_left = 95.0
margin_top = 600.0
margin_right = 505.0
margin_bottom = 650.0

[node name="Contenedor" type="VBoxContainer" parent="InterfazTurno"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = -24.5
margin_right = 205.5
margin_bottom = 24.5

[node name="TxtTurno" type="RichTextLabel" parent="InterfazTurno/Contenedor"]
margin_right = 411.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center]Turno actual[/center]"
text = "Turno actual"
fit_content_height = true

[node name="ColorTurno" type="ColorRect" parent="InterfazTurno"]
margin_left = 43.8763
margin_top = 17.228
margin_right = 376.876
margin_bottom = 41.228
color = Color( 0.192157, 0.678431, 0.121569, 1 )

[node name="PosIniciales" type="Node2D" parent="."]

[node name="Verde" type="Node2D" parent="PosIniciales"]

[node name="InicialVerde" type="Position2D" parent="PosIniciales/Verde"]
position = Vector2( 394, 493 )
rotation = -0.523599

[node name="InicialVerde2" type="Position2D" parent="PosIniciales/Verde"]
position = Vector2( 422, 477 )
rotation = -0.523599

[node name="InicialVerde3" type="Position2D" parent="PosIniciales/Verde"]
position = Vector2( 412, 525 )
rotation = -0.523599

[node name="InicialVerde4" type="Position2D" parent="PosIniciales/Verde"]
position = Vector2( 440, 509 )
rotation = -0.523599

[node name="Rojo" type="Node2D" parent="PosIniciales"]

[node name="InicialRojo" type="Position2D" parent="PosIniciales/Rojo"]
position = Vector2( 176, 480 )
rotation = 0.523599

[node name="InicialRojo2" type="Position2D" parent="PosIniciales/Rojo"]
position = Vector2( 203, 495 )
rotation = 0.523599

[node name="InicialRojo3" type="Position2D" parent="PosIniciales/Rojo"]
position = Vector2( 159, 510 )
rotation = 0.523599

[node name="InicialRojo4" type="Position2D" parent="PosIniciales/Rojo"]
position = Vector2( 186, 526 )
rotation = 0.523599

[node name="Azul" type="Node2D" parent="PosIniciales"]

[node name="InicialAzul" type="Position2D" parent="PosIniciales/Azul"]
position = Vector2( 82, 285 )
rotation = -1.39626

[node name="InicialAzul2" type="Position2D" parent="PosIniciales/Azul"]
position = Vector2( 78, 315 )
rotation = -1.39626

[node name="InicialAzul3" type="Position2D" parent="PosIniciales/Azul"]
position = Vector2( 47, 279 )
rotation = -1.39626

[node name="InicialAzul4" type="Position2D" parent="PosIniciales/Azul"]
position = Vector2( 40, 309 )
rotation = -1.39626

[node name="Amarillo" type="Node2D" parent="PosIniciales"]

[node name="InicialAmarillo" type="Position2D" parent="PosIniciales/Amarillo"]
position = Vector2( 180, 118 )
rotation = -0.523599

[node name="InicialAmarillo2" type="Position2D" parent="PosIniciales/Amarillo"]
position = Vector2( 206, 103 )
rotation = -0.523599

[node name="InicialAmarillo3" type="Position2D" parent="PosIniciales/Amarillo"]
position = Vector2( 163, 89 )
rotation = -0.523599

[node name="InicialAmarillo4" type="Position2D" parent="PosIniciales/Amarillo"]
position = Vector2( 190, 76 )
rotation = -0.523599

[node name="Morado" type="Node2D" parent="PosIniciales"]

[node name="InicialAmarillo" type="Position2D" parent="PosIniciales/Morado"]
position = Vector2( 395, 105 )
rotation = 0.523599

[node name="InicialAmarillo2" type="Position2D" parent="PosIniciales/Morado"]
position = Vector2( 421, 119 )
rotation = 0.523599

[node name="InicialAmarillo3" type="Position2D" parent="PosIniciales/Morado"]
position = Vector2( 437, 91 )
rotation = 0.523599

[node name="InicialAmarillo4" type="Position2D" parent="PosIniciales/Morado"]
position = Vector2( 412, 77 )
rotation = 0.523599

[node name="Naranja" type="Node2D" parent="PosIniciales"]

[node name="InicialAmarillo" type="Position2D" parent="PosIniciales/Naranja"]
position = Vector2( 515, 315 )
rotation = -1.5708

[node name="InicialAmarillo2" type="Position2D" parent="PosIniciales/Naranja"]
position = Vector2( 515, 285 )
rotation = -1.5708

[node name="InicialAmarillo3" type="Position2D" parent="PosIniciales/Naranja"]
position = Vector2( 548, 315 )
rotation = -1.5708

[node name="InicialAmarillo4" type="Position2D" parent="PosIniciales/Naranja"]
position = Vector2( 548, 286 )
rotation = -1.5708

[node name="Fichas6Jugadores" type="Node2D" parent="."]
script = ExtResource( 64 )

[node name="FichasVerdes6J" parent="Fichas6Jugadores" instance=ExtResource( 56 )]

[node name="FichasRojas6J" parent="Fichas6Jugadores" instance=ExtResource( 6 )]

[node name="FichasAzules6J" parent="Fichas6Jugadores" instance=ExtResource( 5 )]

[node name="FichasAmarillas6J" parent="Fichas6Jugadores" instance=ExtResource( 4 )]

[node name="FichasMoradas6J" parent="Fichas6Jugadores" instance=ExtResource( 2 )]

[node name="FichasNaranjas6J" parent="Fichas6Jugadores" instance=ExtResource( 7 )]

[connection signal="area_entered" from="MouseClick" to="MouseClick" method="_on_MouseClick_area_entered"]
[connection signal="pressed" from="DadoBoton" to="DadoBoton/Dado" method="_on_DadoBoton_pressed"]
[connection signal="animation_finished" from="DadoBoton/Dado" to="DadoBoton/Dado" method="_on_Dado_animation_finished"]
[connection signal="resultado_dado" from="DadoBoton/Dado" to="Fichas6Jugadores" method="_on_Dado_resultado_dado"]
